--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Docs
 on:
   push:
     branches:
-      - gh-pages  # dev ブランチに push されたら実行
+      - release  # dev ブランチに push されたら実行
 
 jobs:
   deploy:
