--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - release  # dev ブランチに push されたら実行
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,7 +16,18 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python (必要なら)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies and build Vue app
+        run: |
+          cd app
+          npm install
+          npm run build
+
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
@@ -23,5 +37,5 @@ jobs:
 
       - name: Deploy to gh-pages
         run: |
-          ghp-import -n -f app/docs
+          ghp-import -n -f app/dist
           git push -f origin gh-pages
