--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vuetify": "^3.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
